--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,15 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-    </dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.11</artifactId>
+			<version>2.3.3</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
