--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.11</artifactId>
+			<version>2.3.3</version>
+		</dependency>
     </dependencies>
 
 	<build>
